@@ -143,8 +143,9 @@ static R_CallMethodDef CallEntries[] = {{"R_cutree", (DL_FUNC)&R_cutree, 2},
                                         {"ARIMA_CSS", (DL_FUNC)&ARIMA_CSS, 6},
                                         {"TSconv", (DL_FUNC)&TSconv, 2},
                                         {"getQ0", (DL_FUNC)&getQ0, 2},
-                                        {"port_ivset", (DL_FUNC)&port_ivset, 2},
+                                        {"port_ivset", (DL_FUNC)&port_ivset, 3},
                                         {"port_nlminb", (DL_FUNC)&port_nlminb, 9},
+                                        {"port_nlsb", (DL_FUNC)&port_nlsb, 7},
                                         {"logit_link", (DL_FUNC)&logit_link, 1},
                                         {"logit_linkinv", (DL_FUNC)&logit_linkinv, 1},
                                         {"logit_mu_eta", (DL_FUNC)&logit_mu_eta, 1},
